Fix gcc include-path and macro computation on machines with old GCC.

Whe default to calling GCC with -std=c++0x and fallback to a call
without that argument when the former fails.

BUG: 298252